# ai-anywhere

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  webext.toml
apps/ai-anywhere/: anywhere.toml  views
apps/ai-anywhere/extension/: manifest.json
apps/ai-anywhere/runtime/: Cargo.toml
apps/ai-anywhere/runtime/src/: lib.rs
apps/ai-anywhere/scripts/: build.sh
apps/as-hello/: package.json
apps/as-hello/assembly/: index.ts
apps/as-hello/extension/: manifest.json
apps/as-hello/scripts/: build.sh
apps/quicknote/: anywhere.toml
apps/quicknote/extension/: manifest.json
apps/quicknote/runtime/: Cargo.toml
apps/quicknote/runtime/src/: lib.rs
apps/quicknote/scripts/: build.sh
apps/quicknote/views/: ui.crepus
runtime/: Cargo.toml
runtime/src/: lib.rs
views/: popup.crepus
