[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = ["runtime"]

[workspace.dependencies]
crepuscularity-web    = { path = "../crepuscularity/crates/crepuscularity-web" }
crepuscularity-core   = { path = "../crepuscularity/crates/crepuscularity-core" }
crepuscularity-webext = { path = "../crepuscularity/crates/crepuscularity-webext" }
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
serde-wasm-bindgen    = "0.6"
wasm-bindgen          = "0.2"
